--- a/test/index.html
+++ b/test/index.html
@@ -13,9 +13,12 @@
       <div class="menu">
         <a href="index.html"><img src="images/logo.svg" alt=""></a>
        <ul>
-         <li><a href="" class="navlink"> Home</a></li>
+         <li><a href="" class="navlink active"> Home</a></li>
          <li><a href="" class="navlink">About Us</a></li>
          <li><a href="" class="navlink">Work</a></li>
+         <li class="fontli"><button id="btn-decrease" class="font-btn">-</button>
+          <button id="btn-orig" class="font-btn">A</button>
+          <button id="btn-increase" class="font-btn">+</button></li>
        </ul>
        </div>
     </div>
@@ -28,14 +31,19 @@
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="ti ti-x"></i></a>
     <ul>
-      <li><a href="" class="navlink"> Home</a></li>
+      <li><a href="" class="navlink active"> Home</a></li>
       <li><a href="" class="navlink">About Us</a></li>
       <li><a href="" class="navlink">Work</a></li>
+      <li class="fontli"><button id="btn-decrease" class="font-btn">-</button>
+        <button id="btn-orig" class="font-btn">A</button>
+        <button id="btn-increase" class="font-btn">+</button></li>
     </ul>
   </div>
  
   <!-- Banner Section Starts-->
-  <section class="banner">
+  <section class="banner" > 
+    <!-- particles.js container -->
+<div id="particles-js"></div>
     <div id="bannerowl" class="owl-carousel owl-theme">
       <div class="item">
           <img src="images/banner.png" alt="">
@@ -333,8 +341,63 @@
 <footer>
   <div class="container">
     <div class="footer">
+      <h4>Stay in touch</h4>
+      <p>Get the latest deals, updates & more</p>
+    </div>
+    <div class="row">
+      <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+        <form>
+          <div class="form-group">
+            <input type="email" class="form-control"  placeholder="Enter your email">
+          </div>
+          <a class="subscribe">
+            subscribe
+          </a>
+          </form>
+      </div>
+       
+          <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 mobcol">
+            <a href="#" class="link"> <img src="images/fb.svg" alt=""> </a>
+            <a href="#" class="link"> <img src="images/tw.svg" alt=""> </a>
+            <a href="#" class="link"> <img src="images/lin.svg" alt=""> </a>
+            <a href="#" class="link"> <img src="images/insta.svg" alt=""> </a>
+          </div>
+          <div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 mobcol">
+            <img src="images/messenger.svg" alt="">
+          </div>
+    </div>
+
+    <div class="row contact">
+      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 ">
+        <p>Phone number</p>
+        <h5>+1 (855) 773 3844</h5>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+        <p>Email</p>
+        <h5>info@candidmedia.com</h5>
+      </div>
+    </div>
+    <p class="webp">Website</p>
+    <div class="row footerlink">
+      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 ">
+        <ul>
+          <li><a href="#">About us</a> </li>
+          <li><a href="#">Services</a> </li>
+          <li><a href="#">Work</a> </li>
+        </ul>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 ">
+        <ul>
+          <li><a href="#">Careers</a> </li>
+          <li><a href="#">Blogs</a> </li>
+          <li><a href="#">Contact Us</a> </li>
+        </ul>
+      </div>
+     
+    </div>
+    <div class="webinfo">
       <p>&copy; All rights reserved 2020. candidmedia.com</p>
-      <p class="designp">Designed by : <span>Maple Tech Space</span> </p>
+      <p class="infop">Designed by : <span>Maple Tech Space</span></p>
     </div>
   </div>
 </footer>
@@ -343,5 +406,57 @@
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/owl.carousel.js"></script>
 <script src="js/custom.js"></script>
+<script src="js/particles.js"></script>
+<script src="js/app.js"></script>
+<script>
+  var $affectedElements = $("div, p, span, h2, h5, h4, h1, h3"); // Can be extended, ex. $("div, p, span,h2,h5,h4,h1,h3")
+
+// Storing the original size in a data attribute so size can be reset
+$affectedElements.each( function(){
+  var $this = $(this);
+  $this.data("orig-size", $this.css("font-size") );
+});
+
+$("#btn-increase").click(function(){
+  changeFontSize(1);
+})
+
+$("#btn-decrease").click(function(){
+  changeFontSize(-1);
+})
+
+$("#btn-orig").click(function(){
+  $affectedElements.each( function(){
+        var $this = $(this);
+        $this.css( "font-size" , $this.data("orig-size") );
+   });
+})
+
+function changeFontSize(direction){
+    $affectedElements.each( function(){
+        var $this = $(this);
+        $this.css( "font-size" , parseInt($this.css("font-size"))+direction );
+    });
+}
+</script>
+<script>
+  var  stats, update;
+  stats = new Stats;
+  stats.setMode(0);
+  stats.domElement.style.position = 'absolute';
+  stats.domElement.style.left = '0px';
+  stats.domElement.style.top = '0px';
+  document.body.appendChild(stats.domElement);
+  
+  update = function() {
+    stats.begin();
+    stats.end();
+    if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) {
+      count_particles.innerText = window.pJSDom[0].pJS.particles.array.length;
+    }
+    requestAnimationFrame(update);
+  };
+  requestAnimationFrame(update);
+</script>
 </body>
 </html>
